# SystematicReview_on_BioPsychoSocialModel_in_ChronicPainResearch

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: pipeline.yaml  protocol.yaml  search_queries.yaml
docker/: .dockerignore  Dockerfile  docker-compose.yml
paper/assets/tables/: bps_function_counts.csv  bps_location_counts.csv  conceptual_problem_counts.csv  core_bps_structure.csv  domain_mention_recode_audit.csv  domain_mentions.csv  function_by_review_type_matrix.csv  icd11_counts.csv  included_review_catalog.csv  included_review_full_references.csv  manual_relevance_audit.csv  musculoskeletal_scope.csv  objective_category_llm_counts.csv  objective_category_rule_counts.csv  osf_alignment_checklist.csv  provisional_typology_counts.csv  psychological_concept_counts.csv  publication_period_counts.csv  publication_year_counts.csv  review_type_counts.csv  semantic_dominance_by_review_type.csv  semantic_embedding_landscape_coordinates.csv  semantic_embedding_landscape_coordinates_standalone.csv  semantic_pairwise_records.csv  semantic_pairwise_summary.csv  semantic_subdomain_summary.csv  semantic_top_records.csv  stage3_retrieval_status.csv  table1_description_audit.csv  triadic_by_review_type.csv
paper/report/: main.tex  references.bib
src/bps_review/: __init__.py  __main__.py  cli.py  settings.py
src/bps_review.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bps_review/extraction/: __init__.py  coding.py  llm_stage2.py  stage2.py  (+1 more)
src/logs/: PROJECT_STATUS.md
src/tests/: test_smoke.py
(+191 files in other folders)
